--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <title>Error</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/styles.css}" rel="stylesheet">
 </head>
 <body>
-<h1>Ocurrió un error</h1>
-<a href="/web/clientes">Volver al inicio</a>
+<div th:replace="fragments/navbar :: navbar"></div>
+
+<div class="container text-center mt-5">
+    <div class="alert alert-danger">
+        <h2>Ocurrió un error</h2>
+        <p>Por favor, inténtalo de nuevo más tarde.</p>
+        <a href="/web/clientes" class="btn btn-primary">Volver al inicio</a>
+    </div>
+</div>
 </body>
 </html>
